test/corpus/amount.txt
========================
amount: integer quantity
========================

@ingredient{2}

---

(recipe
  (step
    (ingredient
      (ingredient_name)
      (quantity
        (quantity_value)))))

========================
amount: decimal quantity
========================

@ingredient{2.5}

---

(recipe
  (step
    (ingredient
      (ingredient_name)
      (quantity
        (quantity_value)))))

===========================
amount: fractional quantity
===========================

@ingredient{5/2}

---

(recipe
  (step
    (ingredient
      (ingredient_name)
      (quantity
        (quantity_value)))))

=======================================
amount: fractional quantity with spaces
=======================================

@ingredient{5 / 2}

---

(recipe
  (step
    (ingredient
      (ingredient_name)
      (quantity
        (quantity_value)))))

======================
amount: large quantity
======================

@ingredient{2000%g}

---

(recipe
  (step
    (ingredient
      (ingredient_name)
      (quantity
        (quantity_value)
        (quantity_unit)))))

===============================
amount: mixed fraction quantity
===============================

@ingredient{1 1/2%cups}

---

(recipe
  (step
    (ingredient
      (ingredient_name)
      (quantity
        (quantity_value)
        (quantity_unit)))))

=============================
amount: unit with % separator
=============================

@ingredient{250%ml}

---

(recipe
  (step
    (ingredient
      (ingredient_name)
      (quantity
        (quantity_value)
        (quantity_unit)))))

=================================
amount: unit with space separator
=================================

@ingredient{250 ml}

---

(recipe
  (step
    (ingredient
      (ingredient_name)
      (quantity
        (quantity_value)
        (quantity_unit)))))

=================================
amount: zero quantity
=================================

@ingredient{0 ml}

---

(recipe
  (step
    (ingredient
      (ingredient_name)
      (quantity
        (quantity_value)
        (quantity_unit)))))

================================
amount: non-numeric value
================================

@ingredient{to taste}

---

(recipe
  (step
    (ingredient
      (ingredient_name)
      (quantity
        (quantity_value)))))
