test/corpus/hanging_bugs.txt
===
regression: hyphen basic
===

medium-high

---

(recipe
  (step
    (text
      (text_content))))

============================================================
regression: frontmatter blank line does not truncate block
============================================================

---
title: hi

author: me
---

---

(recipe
  (frontmatter
    (frontmatter_content)))

============================================================
regression: non-timer ~ does not swallow following ingredient
============================================================

~notimer @salt

---

(recipe
  (step
    (text
      (text_content))
    (ingredient
      (ingredient_name))))

===
regression: hyphen in full step
===

Cut @pork{1/2%lb} into small cubes. Using the same skillet, add 2 Tbsp of olive oil and cook pork for ~{5%minutes} over medium-high heat, stirring occasionally.

---

(recipe
  (step
    (text
      (text_content))
    (ingredient
      (ingredient_name)
      (quantity
        (quantity_value)
        (quantity_unit)))
    (text
      (text_content))
    (timer
      (quantity
        (quantity_value)
        (quantity_unit)))
    (text
      (text_content))))
